kubernetes/external/navidrome/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-external-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - music.bbg.pe
      secretName: music-bbg-pe-tls
  rules:
    - host: music.bbg.pe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome-external-svc
                port:
                  number: 80
